# DiskMINT

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml
chemistry/bin_example_linux/: disk_main
chemistry/src/: Makefile  auxilary.f90  chemistry.f90  disk_extract.f90  disk_main.f90  disk_output.f90  global_variables.f90  init_chem.f90  init_struc.f90  ode_solve.f90  opkda1.f90  opkda2.f90  opkdmain.f90  shielding.f90
chemistry/with_CO2_ice/: getinput-IMLup.py  getinput.py  getoutput-IMLup.py  getoutput.py
chemistry/without_CO2_ice/: getinput.py  getoutput.py
diskmint/: __init__.py  constants.py  disk_density.py  model.py
diskmint/.ipynb_checkpoints/: __init__-checkpoint.py  constants-checkpoint.py  disk_density-checkpoint.py  model-checkpoint.py
docs/: requirements.txt
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: advanced.md  api.md  conf.py  index.md  quickstart.md
docs/source/AI Features/: ai_ref_index.md  error_reference.md  install_reference.md  nursery_tutorial.md  output_format_reference.md  parameters_reference.md  prompts_reference.md  workflow_reference.md
docs/source/Quick Start/: Installation.md  quick_start_index.md  quickstart.md  requirements.md
docs/source/User Guide/: ai_assistant.md  build_your_own_model.md  diskmint_garden.md  hpc_guide.md  ml_ai_inference.md  physics_background.md  surface_density_fitting.md  thermochemical_processes.md  user_guide_index.md
docs/source/_templates/: templates.md
docs/source/ai_features/: ai_ref_index.md  error_reference.md  install_reference.md  nursery_tutorial.md  output_format_reference.md  parameters_reference.md  prompts_reference.md  workflow_reference.md
docs/source/archive_docs/: README_v0.md  index_v0.md  index_v1.md  model_parameters_simple.md  quickstart_v0.md
docs/source/examples/: example_0p5ms_star.md  example_RULup.md  example_garden.md  example_index.md  example_radial_profile_fit.md
docs/source/quick_start/: Installation.md  quick_start_index.md  quickstart.md  requirements.md
docs/source/user_guide/: ai_assistant.md  build_your_own_model.md  diskmint_garden.md  ml_ai_inference.md  physics_background.md  surface_density_fitting.md  user_guide_index.md
examples/example_RULup/: example_model_RULup.py  example_model_RULup_VHSE_bestfit_parameters.csv
examples/example_RULup/.ipynb_checkpoints/: example_RULup-checkpoint.py
examples/example_RULup/LIME_example_RULup/: colimemodel.c  dustkappa_WD01comb.inp  wrapper_LIME_example.py
examples/example_RULup/data/: COendgrid-reducedRGH22-example_model_RULup_VHSE_bestfit-cyl.chem  RULupSpecModel_wuv.inp  aave.inp  amr_grid.inp  dustkappa_WD01_amax0p3cm_0.inp  dustkappa_WD01_amax0p3cm_1.inp  dustkappa_WD01_amax0p3cm_10.inp  dustkappa_WD01_amax0p3cm_11.inp  dustkappa_WD01_amax0p3cm_12.inp  dustkappa_WD01_amax0p3cm_13.inp  dustkappa_WD01_amax0p3cm_14.inp  dustkappa_WD01_amax0p3cm_15.inp  dustkappa_WD01_amax0p3cm_16.inp  dustkappa_WD01_amax0p3cm_17.inp  dustkappa_WD01_amax0p3cm_18.inp  dustkappa_WD01_amax0p3cm_19.inp  dustkappa_WD01_amax0p3cm_2.inp  dustkappa_WD01_amax0p3cm_3.inp  dustkappa_WD01_amax0p3cm_4.inp  dustkappa_WD01_amax0p3cm_5.inp  dustkappa_WD01_amax0p3cm_6.inp  dustkappa_WD01_amax0p3cm_7.inp  dustkappa_WD01_amax0p3cm_8.inp  dustkappa_WD01_amax0p3cm_9.inp  dustopac.inp  fracs.inp  fracs_numb.inp  gas_temperature.inp  gas_temperature_mdust_VHSE_0.inp  gas_temperature_mdust_VHSE_1.inp  gas_temperature_mdust_VHSE_1.new  gas_temperature_mdust_VHSE_2.inp  gas_temperature_mdust_VHSE_2.new  gas_temperature_mdust_VHSE_3.inp  gas_temperature_mdust_VHSE_3.new  (+16 more)
examples/example_diskmint_garden/: README.md  diskmint_garden_quickstart.ipynb  run_garden_example.py
examples/example_simple_test_1ms_star/: 0-model_test_1Msolar.py  model_parameters_1msolar.csv
examples/example_utils/: diskmint_utils.py
src/diskmint/: __init__.py  constants.py  disk_density.py  dustopac.py  execute.py  model.py  modelgrid.py
tests/: conftest.py  test_example_radial_profile_fit.py  test_garden_infer.py
(+200 files in other folders)
