[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diskmint"
version = "1.6.0"
description = "Self-consistent thermochemical disk model for individual targets."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Dingshan Deng", email = "dingshandeng@arizona.edu" }
]
dependencies = [
  "numpy",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/DingshanDeng/DiskMINT"

[tool.setuptools]
packages = ["diskmint"]
package-dir = {"" = "src"}

# Include non-python data files if you have any inside src/diskmint
[tool.setuptools.package-data]
diskmint = ["*.dat", "data/*"]