[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diskmint"
version = "1.7.0b0"
description = "Self-consistent thermochemical disk model for individual targets."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Dingshan Deng", email = "dingshandeng@arizona.edu" }
]
dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
garden = [
  "pandas",
  "astropy",
  "scikit-learn>=1.8,<1.9",
  "xgboost",
  "joblib",
]

[project.urls]
Homepage = "https://github.com/DingshanDeng/DiskMINT"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Include non-python data files if you have any inside src/diskmint
[tool.setuptools.package-data]
diskmint = [ "data/*", "data/chem/**/*", "*.dat", "*.inp"]
"diskmint.garden" = [ "data/*.joblib" ]
